force-app/main/default/objects/cgcloud__Batch_Last_Successful_Run__c/cgcloud__Batch_Last_Successful_Run__c.object-meta.xml
<CustomObject>
    <description>Keeps the track of last successful runs</description>
    <label>Batch Last Successful Run</label>
    <nameField>
        <displayFormat>BLSR-{000000}</displayFormat>
        <label>Batch Last Successful Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Last Successful Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>