force-app/main/default/objects/cgcloud__Batch_Last_Successful_Run__c/fields/cgcloud__Last_Run_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Run_Mode__c</fullName>
    <description>The mode for which batch process ran.</description>
    <label>Last Run Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>