force-app/main/default/objects/cgcloud__Batch_Last_Successful_Run__c/fields/cgcloud__Last_Successful_Run__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Successful_Run__c</fullName>
    <description>The last successful run of batch process.</description>
    <label>Last Successful Run</label>
    <type>DateTime</type>
</CustomField>