force-app/main/default/objects/cgcloud__Batch_Last_Successful_Run__c/fields/cgcloud__Process_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Process_Id__c</fullName>
    <description>The process reference of batch.</description>
    <label>Process Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>