force-app/main/default/objects/cgcloud__Batch_Last_Successful_Run__c/fields/cgcloud__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Id__c</fullName>
    <description>The unique concatenation of process and sales org.</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>