force-app/main/default/objects/cgcloud__Batch_Last_Successful_Run__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Process_Id__c</columns>
    <columns>cgcloud__Last_Run_Mode__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>